# app_generator

./: .gitignore  README.md  install.sh  pyproject.toml
examples/: integrations.yaml  openapi.yaml
src/app_generator/: __init__.py  cli.py  generator.py
src/app_generator/templates/: app.py.jinja2  database.py.jinja2  models.py.jinja2
